<resources>

    <string name="app_name">Name That President!</string>
    <string name="app_package">com.nennig.name.that.president</string>
    <string name="menu_settings">Settings</string>
    <string name="main_welcome_text">Welcome to</string>
    <string name="main_text">Text Text:</string>
    <string name="main_start_button">Start/Continue</string>
    <string name="main_more_games">See More Name That!</string>
    <string name="title_activity_viewer">ViewerActivity</string>
    <string name="next_button">Next</string>
    <string name="menu_start_over">Start Over</string>
    <string name="menu_main_menu">Main Menu</string>
    <string name="menu_rate_this">Rate this App</string>
    <string name="menu_about">About</string>
    <string name="menu_reset">Reset Scores</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="score_back_button">Return to Start</string>
    <string name="score_review_button">Review Wrong Answers</string>
    <string name="main_review_button">Review</string>
    <string name="viewer_answer_button">Show Me</string>

</resources>