<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <LinearLayout
        android:id="@+id/score_text_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/score_text"
            style="@style/ScoreText" 
            android:text="@string/main_text"/>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >
        
        <Button
        android:id="@+id/score_review_button"
        style="@style/ButtonText"
        android:background="@drawable/blue_button"
        android:text="@string/score_review_button" />
        
        <Button
        android:id="@+id/score_back_button"
        style="@style/ButtonText"
        android:background="@drawable/blue_button"
        android:text="@string/score_back_button" />
    </LinearLayout>
</RelativeLayout>
